lldpd (1.0.20)
 * Changes:
   + Enable fast start unconditionally (and move its configuration in "configure lldp") (#683)
   + Make VLAN advertisements configurable (#740)
 * Fix:
   + Do not break zero-copy traffic on Linux (#732 and #733)
   + Fix crash on rapid addition/removal of interfaces (#744)

lldpd (1.0.19)
 * Changes:
   + Support of both Apple Silicon and Intel for macOS package.
   + Add cvlan/svlan/tpmr capabilities.
   + Disable LLDP in firmware for Intel X7xx cards on FreeBSD.
   + Add lldpctl_watch_sync_unblock to liblldpctl.
   + Add C++ wrapper for lldpctl.
 * Fix:
   + Fix AppArmor policy for /run/lldpd/lldpd.socket.lock.
   + Do not query stats for a down interface on Linux.

lldpd (1.0.18)
 * Changes (breaking):
   + Remove support for building 802.3bt TLVs (broken).
 * Fix:
   + Fix memory leaks in EDP/FDP decoding when receiving some TLVs twice.
   + Do not set interface description continuously.
   + Use a different Netlink socket for changes and queries.

lldpd (1.0.17)
 * Fix:
   + Read overflow when parsing CDP addresses. Thanks to Matteo Memelli.
   + Don't output empty lines on configure commands.

lldpd (1.0.16)
 * Fix:
   + Do not use 00:00:00:00:00:00 as chassis ID.
   + Do not busy loop when an interface with a neighbor disappears.

lldpd (1.0.15)
 * Changes
   + Add configure command to override system capabilities. Contributed by
     Ignacio Sanchez Navarro. (#526)
   + An unrecognized ORG TLV is now considered as a custom one. (#536)
 * Fix:
   + Really don't send VLANs when there are too many (#520)
   + Ignore temporary IPv6 addresses (#521)

lldpd (1.0.14)
 * Changes
   + Add configure commands to alter inventory TLVs (#508)
 * Fix:
   + Update seccomp rules for newer kernel/libc (#488)
   + Correctly handle an interface whose index has changed (#490)
   + Don't send VLANs when there are too many (#501)

lldpd (1.0.13)
 * Fix:
   + Add support for 2.5G, 5G, 25G and 50G based Ethernet (#475)