@@ -5,6 +5,7 @@ lldpd (1.0.20)
  * Fix:
    + Do not break zero-copy traffic on Linux (#732 and #733)
    + Fix crash on rapid addition/removal of interfaces (#744)
+   + Fix management address selection when pattern is a negative IP address
 
 lldpd (1.0.19)
  * Changes:
